Moved the --dns-ip and --no-dns-ip options from the modify-dns.pl API script to modify-domain.pl and create-domain.pl.
The default TTL for DNS domains (set using the $ttl line in the zone file) can now be configured in server templates.
Added commands to be run before and after scheduled backups, settable on the Edit Scheduled Backup page.
Added an option to the Script Installers page to deny access to new script types by default.
Backups and restores to S3 buckets in Europe are now fully supported.
Added a Module Config field under Advanced options for specifying the path to an alternate tar command.
Added an option for email-based ticket submission to the eTicket installer.
Extracted all settings related to default quotas and limits from templates, and moved them into the new Account Plan objects. These can be created by both the master admin and resellers, and selected for new or existing virtual servers. Also added a command-line API for plan management.
The master admin can select a reseller to own a new top-level virtual server when it is created.
---- Changes since 3.66 ----
Updated the DokuWiki script installer to version 2009-02-14, Radiant to 0.7.1, Trac to 0.11.3, OpenGoo to 1.2.0.1, phpMyFAQ to 2.0.12, Piwik to 0.2.30, phpScheduleIt to 1.2.11, and Nucleus to 3.40.
The bandwidth limit and using variables in all email templates (BW_LIMIT and BW_USAGE) are now formatted in MB or GB, instead of just being a number of bytes.
Added a Module Config option for an alternate command to use when moving a virtual server's home directory, instead of mv.
Mail files are now always included in backups and restores, even when under /var/mail.
If a plan specifies features to be granted to domain owners, those features will be enabled on the Create Virtual Server page when the plan is selected. Otherwise, defaults set on the Features and Plugins page will be used.
Added --email-only flags to the list-users.pl and list-domains.pl API scripts.