@@ -1061,6 +1061,7 @@ Extracted all settings related to default quotas and limits from templates, and 
 The master admin can select a reseller to own a new top-level virtual server when it is created.
 ---- Changes since 3.66 ----
 Updated the DokuWiki script installer to version 2009-02-14, Radiant to 0.7.1, Trac to 0.11.3, OpenGoo to 1.2.0.1, phpMyFAQ to 2.0.12, Piwik to 0.2.30, phpScheduleIt to 1.2.11, and Nucleus to 3.40.
+Added an option to download the all-languages version of phpMyAdmin.
 The bandwidth limit and using variables in all email templates (BW_LIMIT and BW_USAGE) are now formatted in MB or GB, instead of just being a number of bytes.
 Added a Module Config option for an alternate command to use when moving a virtual server's home directory, instead of mv.
 Mail files are now always included in backups and restores, even when under /var/mail.
